Added some more API docs
